# rust-lpc81x-hal

./: Cargo.toml  LICENSE  README.md  lpc800-v0.3.svd  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
examples/: ds3231.rs  gpio.rs  rtfm.rs  ssd1322.rs
scripts/: build.sh
src/: clock.rs  gpio.rs  i2c.rs  lib.rs  pmu.rs  swm.rs  syscon.rs
src/i2c/: mod.rs  mode.rs
src/pinint/: int.rs  mod.rs  mode.rs
src/pins/: mod.rs  mode.rs  pin.rs
src/spi/: cfg.rs  mod.rs  mode.rs  word.rs
src/swm/: mod.rs  mode.rs  pin.rs
