[package]
name = "lpc81x-hal"
version = "0.1.0"
authors = ["Martin Atkins <mart@degeneration.co.uk>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
lpc81x-pac = "0.1.0"
nb = "0.1.2"
void = "1.0.2"

[dev-dependencies]
cortex-m-rt = "0.6.8"
cortex-m-rtfm = "0.4.3"
panic-halt = "0.2.0"
