[package]
name = "lpc81x-hal"
description = "High-level API and HAL implementations for LPC81x microcontrollers."
version = "0.1.0"
authors = ["Martin Atkins <mart@degeneration.co.uk>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/apparentlymart/rust-lpc81x-hal"

[lib]
test = false

[dependencies]
cortex-m = "0.6.0"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
lpc81x-pac = { version = "0.1.0", features = ["rt"] }
nb = "0.1.2"
void = { version = "1.0.2", default-features = false }

[dev-dependencies]
cortex-m-rt = "0.6.8"
cortex-m-rtfm = "0.4.3"
panic-halt = "0.2.0"

[profile.dev]
debug = 1
opt-level = "z"

[profile.release]
debug = false
opt-level = "s"
lto = true
